tests/spec/emit/snapshots/pub_interface_methods_exported.snap
---
source: tests/spec/emit/types.rs
description: |
  
  pub interface Describable {
    fn describe(self) -> string
  }
---
package main

type Describable interface {
	Describe() string
}
