tests/spec/emit/snapshots/pure_constructor_does_not_force_sibling_pins.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(int)
  
  fn run() -> int {
    let pair = (Wrap(9), Wrap(8))
    pair.0.0 + pair.1.0
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Wrap int

func run() int {
	pair := lisette.MakeTuple2[Wrap, Wrap](Wrap(9), Wrap(8))
	return int(pair.First) + int(pair.Second)
}
