tests/spec/emit/snapshots/pure_constructor_with_mutable_read_pins_when_later_operand_pins.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn run() -> int {
    let mut x = 1
    let bump = || -> int { x = 20; 2 }
    let elems = [Some(x), Some(x + bump()), Some(x)]
    elems[0].unwrap_or(-1) + elems[1].unwrap_or(-1) + elems[2].unwrap_or(-1)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func run() int {
	x := 1
	bump := func() int {
		x = 20
		return 2
	}
	v := lisette.MakeOptionSome(x)
	left := x
	elems := []lisette.Option[int]{
		v,
		lisette.MakeOptionSome(left + bump()),
		lisette.MakeOptionSome(x),
	}
	return elems[0].UnwrapOr(-1) + elems[1].UnwrapOr(-1) + elems[2].UnwrapOr(-1)
}
