tests/spec/emit/snapshots/pure_signature_interface_skips_adapter.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/simple"
  
  struct Greeter {}
  
  impl Greeter {
    fn Greet(self, name: string) -> string {
      name
    }
  }
  
  fn call(g: simple.Greeter) -> string {
    g.Greet("world")
  }
  
  fn main() {
    let g = Greeter {}
    let _ = call(g as simple.Greeter)
  }
---
package main

import "example.com/simple"

type Greeter struct{}

func (g Greeter) Greet(name string) string {
	return name
}

func call(g simple.Greeter) string {
	return g.Greet("world")
}

func main() {
	g := Greeter{}
	call(g)
}
