tests/spec/emit/snapshots/range_bound_over_a_mutated_slice_keeps_the_bound_temp.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let mut items = [1, 2, 3]
    for i in 0..items.length() {
      items = items.append(i)
      fmt.Println(items.length())
    }
  }
---
package main

import "fmt"

func main() {
	items := []int{1, 2, 3}
	bound := len(items)
	for i := range bound {
		items = append(items, i)
		fmt.Println(len(items))
	}
}
