tests/spec/emit/snapshots/range_field_access.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test() -> int {
    let r = 0..10;
    r.start + r.end
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	r := lisette.Range[int]{
		Start: 0,
		End:   10,
	}
	return r.Start + r.End
}
