tests/spec/emit/snapshots/range_for_loop_binding_before_start.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let start = 0
    for start in start..3 {
      let _ = start
    }
  }
---
package main

func main() {
	start := 0
	for start_1 := start; start_1 < 3; start_1++ {
		_ = start_1
	}
}
