tests/spec/emit/snapshots/range_for_loop_end_before_start.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn start() -> int { 0 }
  fn bound() -> int { 3 }
  
  fn main() {
    for i in start()..bound() {
      let _ = i
    }
  }
---
package main

func start() int {
	return 0
}

func bound() int {
	return 3
}

func main() {
	start_1 := start()
	bound_1 := bound()
	for i := start_1; i < bound_1; i++ {
		_ = i
	}
}
